# NetworkGameTest

./: CMakeLists.txt  NGTClient.cpp  NGTServer.cpp  OMCServer.cpp  c_main.cpp  s_main.cpp
clibs/: CmakeLists.txt  mapHandler.cpp  mapHandler.hpp  serverHandler.cpp  serverHandler.hpp
common/: CMakeLists.txt  baseSocket.cpp  baseSocket.hpp
docs/: Doxyfile.in
lib/: CMakeLists.txt
lib/clibs/: CmakeLists.txt  mapHandler.cpp  mapHandler.hpp  serverHandler.cpp  serverHandler.hpp  serverRecvHandler.hpp
lib/libcom/: CMakeLists.txt
lib/libcom/include/com/: messageReceiver.hpp  messageReceiverInterface.hpp  receiveBufferQueue.hpp  receiveQueue.hpp  sendQueue.hpp
lib/libcom/include/com/client/: serverConnectionHandler.hpp
lib/libcom/include/com/server/: clientConnectionHandler.hpp
lib/libcom/src/: clientConnectionHandler.cpp  messageContainer.cpp  receiveBufferQueue.cpp  receiveQueue.cpp  sendQueue.cpp  serverConnectionHandler.cpp
lib/libmap/: CMakeLists.txt
lib/libmap/include/map/: baseMap.hpp
lib/libmap/include/map/client/: networkMap.hpp
lib/libmap/include/map/server/: fileMap.hpp
lib/libmap/src/: baseMap.cpp  fileMap.cpp  networkMap.cpp
lib/libnet/: CMakeLists.txt
lib/libnet/include/net/: messageContainer.hpp  messageReceiverInterface.hpp  receiveQueue.hpp  sendQueue.hpp
lib/libnet/include/net/client/: clientConnectionController.hpp  serverConnectionHandler.hpp
lib/libnet/include/net/server/: serverConnectionController.hpp
lib/libnet/src/: clientConnectionController.cpp  clientConnectionHandler.cpp  messageContainer.cpp  receiveQueue.cpp  sendQueue.cpp  serverConnectionController.cpp  serverConnectionHandler.cpp
lib/libplayer/: CMakeLists.txt
lib/libplayer/include/player/server/: player.hpp  playerCollection.hpp  playerConnection.hpp  playerConnectionController.hpp  playerController.hpp  playerListener.hpp  playerMessageContainer.hpp  playerNetworkComponent.hpp
lib/libplayer/src/: player.cpp  playerCollection.cpp  playerConnection.cpp  playerConnectionController.cpp  playerController.cpp  playerListener.cpp  playerMessageContainer.cpp  playerNetworkComponent.cpp
lib/libplayercon/: CMakeLists.txt
lib/libplayercon/include/playercon/server/: playerConnection.hpp  playerConnectionController.hpp
lib/libplayercon/src/: playerConnection.cpp  playerConnectionController.cpp
lib/libplctrl/: CMakeLists.txt
lib/libplctrl/include/plctrl/server/: playerConnection.hpp  playerConnectionController.hpp  playerController.hpp
lib/libplctrl/src/: playerConnection.cpp  playerConnectionController.cpp  playerController.cpp
lib/libscom/: CMakeLists.txt
lib/libscom/include/scom/client/: serverConnectionHandler.hpp  serverMessageReceiver.hpp
lib/libscom/src/: serverConnectionHandler.cpp
lib/libsock/: CMakeLists.txt
lib/libsock/include/sock/: baseSocket.hpp  clientSocket.hpp  listeningSocket.hpp  sessionSocket.hpp  transmissionSocket.hpp
lib/libsock/src/: baseSocket.cpp  clientSocket.cpp  listeningSocket.cpp  sessionSocket.cpp  transmissionSocket.cpp
lib/slibs/: CmakeLists.txt  mapHandler.cpp  mapHandler.hpp  player.cpp  player.hpp  playerHandler.cpp  playerHandler.hpp
lib/sock/: CMakeLists.txt
slibs/: CmakeLists.txt  mapHandler.cpp  mapHandler.hpp  player.cpp  player.hpp  playerHandler.cpp  playerHandler.hpp
